0.02
 - Fix minimal version of dependencies.

0.01 2023-04-28T20:36:21+02:00
 - First version.